[package]
name = "legionr-bpf-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Userspace builds enable `user` to get the aya Pod impl; the eBPF crate omits it.
user = ["aya"]

[dependencies]
aya = { version = "0.13", optional = true }

[lib]
path = "src/lib.rs"
